# Emagick

./: .gitignore  CMakeLists.txt  README  README.md  compile_commands.json
include/: Emagick.h  guiHandler.h  mainWindow.h
src/: Emagick.cpp  guiHandler.cpp  main.cpp  mainWindow.cpp  qml.qrc  utilities.cpp
src/qml/: MainWindow.qml  MainWindow__.qml  mainWindow.qml
